# linux-as-a-service

./: .env  .gitignore  CODEOWNERS  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  todo.md  ty.toml  wsgi.py
requirements/: dev.txt
src/laas/: app.py  cfgloader.py  history.py  session.py  session_manager.py
src/laas/exceptions/: AnotherKeyError.py
src/laas/utils/: execute_command.py
tmp/: encrypt_secret.py
